--- a/app/src/main/res/layout/activity_customize_note.xml
+++ b/app/src/main/res/layout/activity_customize_note.xml
@@ -116,6 +116,41 @@
                 android:layout_marginTop="@dimen/bu0_5"
                 android:background="@color/greyCC" />
 
+            <LinearLayout
+                android:id="@+id/layout_button"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/bu0_5"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="@dimen/bu6"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/bu1_5"
+                        android:text="@string/customize_note_activity_text_button"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_size_34px" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/list_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/bu0_5"
+                    android:background="@color/greyCC" />
+            </LinearLayout>
+
             <RelativeLayout
                 android:id="@+id/view_text_color"
                 android:layout_width="match_parent"
