--- a/app/src/main/res/layout/layout_note_picker.xml
+++ b/app/src/main/res/layout/layout_note_picker.xml
@@ -59,16 +59,16 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/image_bends_button"
                 android:layout_width="@dimen/bu1_5"
                 android:layout_height="@dimen/bu1_5"
-                android:scaleType="fitXY"
-                android:src="@drawable/icon_bends" />
+                android:scaleType="fitXY" />
 
             <TextView
+                android:id="@+id/text_bends_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/bu0_25"
-                android:text="@string/note_picker_view_button_bends"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_20px" />
         </LinearLayout>
