--- a/app/src/main/res/layout/list_item_note_picker.xml
+++ b/app/src/main/res/layout/list_item_note_picker.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/text_upper_note"
-        android:layout_width="@dimen/bu3"
+        android:layout_width="@dimen/bu3_5"
         android:layout_height="@dimen/bu3"
         android:layout_below="@+id/border_top"
         android:layout_centerHorizontal="true"
@@ -19,7 +19,7 @@
         android:clickable="true"
         android:gravity="center"
         android:maxLines="1"
-        android:textSize="@dimen/text_size_42px" />
+        android:textSize="@dimen/text_size_38px" />
 
     <RelativeLayout
         android:id="@+id/view_middle_hole"
@@ -41,7 +41,7 @@
 
     <TextView
         android:id="@+id/text_lower_note"
-        android:layout_width="@dimen/bu3"
+        android:layout_width="@dimen/bu3_5"
         android:layout_height="@dimen/bu3"
         android:layout_below="@+id/view_middle_hole"
         android:layout_centerHorizontal="true"
@@ -49,7 +49,7 @@
         android:clickable="true"
         android:gravity="center"
         android:maxLines="1"
-        android:textSize="@dimen/text_size_42px" />
+        android:textSize="@dimen/text_size_38px" />
 
     <View
         android:id="@+id/border_bottom"
