--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -311,6 +311,16 @@
                     android:background="@color/greyCC" />
             </RelativeLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/bu1_5"
+                android:layout_marginTop="@dimen/bu2"
+                android:text="@string/customize_activity_text_media_player"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_size_30px"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -343,6 +353,51 @@
 
                 <Switch
                     android:id="@+id/switch_show_media_player"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/bu1" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/greyCC" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="@dimen/bu1_5"
+                    android:layout_marginRight="@dimen/bu5"
+                    android:layout_marginTop="@dimen/bu1_5"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/bu1_5"
+                        android:text="@string/customize_activity_text_play_closes_media_player"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_size_34px" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/bu1_5"
+                        android:text="@string/customize_activity_text_play_closes_media_player_description"
+                        android:textColor="@color/grey77"
+                        android:textSize="@dimen/text_size_28px" />
+                </LinearLayout>
+
+                <Switch
+                    android:id="@+id/switch_play_closes_media_player"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
