--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -2,16 +2,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.mivas.myharmonicasongs.MainActivity">
+
     <item
         android:id="@+id/action_search_song"
         android:icon="@drawable/icon_search2"
         android:title="@string/main_activity_menu_search"
         app:showAsAction="always" />
+
     <item
         android:id="@+id/action_add_song"
         android:icon="@drawable/icon_plus"
         android:title="@string/main_activity_menu_add_song"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_random_song"
+        android:title="@string/main_activity_menu_random_song"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_settings"
         android:title="@string/main_activity_menu_settings"
