--- a/app/src/main/res/layout/activity_customize_note.xml
+++ b/app/src/main/res/layout/activity_customize_note.xml
@@ -19,6 +19,56 @@
         app:theme="@style/ToolbarBackArrow"
         app:titleTextColor="@color/white" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bu14"
+        android:background="@color/greyEE"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/preview_cell"
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/bu3">
+
+            <TextView
+                android:id="@+id/preview_note"
+                android:layout_width="wrap_content"
+                android:maxLines="1"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/preview_word"
+                android:maxLines="1"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:text="text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/preview_cell"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/bu0_25"
+            android:text="@string/customize_note_activity_text_preview"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_30px" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/greyCC" />
+    </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,38 +77,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:scrollbars="none">
-
-            <RelativeLayout
-                android:id="@+id/view_preview"
-                android:layout_width="@dimen/bu4"
-                android:layout_height="@dimen/bu5_5"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/bu3">
-
-                <TextView
-                    android:id="@+id/text_preview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:textSize="@dimen/text_size_48px" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/bu0_25"
-                android:text="@string/customize_note_activity_text_preview"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_30px" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/bu3"
-                android:background="@color/greyCC" />
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -119,8 +138,8 @@
             <LinearLayout
                 android:id="@+id/layout_button"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -182,7 +201,6 @@
                     android:background="@color/greyCC" />
             </RelativeLayout>
 
-
             <RelativeLayout
                 android:id="@+id/view_background_color"
                 android:layout_width="match_parent"
@@ -214,6 +232,110 @@
                     android:layout_alignParentBottom="true"
                     android:background="@color/greyCC" />
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bu5"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="@dimen/bu10"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/bu1_5"
+                    android:text="@string/customize_note_activity_text_width"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_34px" />
+
+                <SeekBar
+                    android:id="@+id/seekbar_width"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:max="6" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/greyCC" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bu5"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="@dimen/bu10"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/bu1_5"
+                    android:text="@string/customize_note_activity_text_height"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_34px" />
+
+                <SeekBar
+                    android:id="@+id/seekbar_height"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:max="6" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/greyCC" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bu5"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="@dimen/bu10"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/bu1_5"
+                    android:text="@string/customize_note_activity_text_text_size"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_34px" />
+
+                <SeekBar
+                    android:id="@+id/seekbar_text_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:max="6" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/greyCC" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bu5"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="@dimen/bu10"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/bu1_5"
+                    android:text="@string/customize_note_activity_text_word_size"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_34px" />
+
+                <SeekBar
+                    android:id="@+id/seekbar_word_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:max="6" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/greyCC" />
 
         </LinearLayout>
     </ScrollView>
