--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -253,6 +253,29 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/view_privacy_policy"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bu5"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/bu1_5"
+                    android:text="@string/settings_activity_text_privacy_policy"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_34px" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/greyCC" />
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/view_version"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bu6"
